--- a/views/index.jade
+++ b/views/index.jade
@@ -1,2 +1,41 @@
-h1= title
-p Welcome to #{title}
+extends layout
+
+
+block content
+    script(type='text/javascript')
+        (function ($){
+            Friend = Backbone.Model.extend({
+                name: null
+            });
+            Friends = Backbone.Collection.extend({
+                initialize: function(models, options){
+                    this.bind('add', options.view.addFriendLi);
+                }
+            });
+            window.AppView = Backbone.View.extend({
+                el: $('body'),
+                initialize: function(){
+                    console.log('creating a list for friends');
+                    this.friends = new Friends(null, { view: this });
+                },
+                events: {
+                    'click #add-friend': 'showPrompt',
+                },
+                showPrompt: function() {
+                    var friend_name = prompt('Who is your friend?');
+                    console.log('creating new friend model: ' + friend_name);
+                    var friend_model = new Friend({ name: friend_name });
+                    console.log('adding friend ' + friend_model.get('name') + ' to list');
+                    this.friends.add(friend_model);
+                    console.log('friend added. Now we have ' + this.friends.length + ' friends');
+                },
+                addFriendLi: function(model){
+                    $('#friends-list').append('<li>' + model.get('name') + '</li>');
+                }
+            });
+            var appview = new AppView();
+        })(jQuery);
+    h1= title
+    p Welcome to #{title}
+    button(id='add-friend') Add friend
+    ul(id='friends-list')
