Getting Backbone models working in Node, next step is to use them and send them to the client

--- a/views/index.jade
+++ b/views/index.jade
@@ -2,6 +2,7 @@ extends layout
 
 
 block content
+    script(type='text/javascript', src='models/Models.js')
     script(type='text/javascript')
         (function ($){
             Friend = Backbone.Model.extend({
